refactoring of generalData, materials, energy and waste screens | implementation and testing of add and edit functionalities on generalData, materials and energy screens

--- a/src/assets/styles/registar.css
+++ b/src/assets/styles/registar.css
@@ -4,8 +4,11 @@
 
 .nav-item {
   width: 100%;
+  background-color: #e4e4e4;
+  border: 1px solid lightslategray;
 }
 
 .nav-link {
   width: 100%;
 }
+
