--- a/src/assets/styles/registar.css
+++ b/src/assets/styles/registar.css
@@ -2,11 +2,11 @@
   width: 100%;
 }
 
-.nav-item {
+/*.nav-item {
   width: 100%;
   background-color: #e4e4e4;
   border: 1px solid lightslategray;
-}
+}*/
 
 .nav-link {
   width: 100%;
