--- a/src/assets/styles/avaliacaoambiental.css
+++ b/src/assets/styles/avaliacaoambiental.css
@@ -19,10 +19,31 @@
   }
 }
 
-.nav-item{
+/*nav-item{
   flex: 1;
 }
 
 .tab-content{
   width: 100%;
+}*/
+
+.nav-tabs {
+  border: none !important;
+}
+
+.nav-tabs .nav-link {
+  padding-left: 60px !important;
+  padding-right: 60px !important;
+}
+
+.nav-link.active {
+  background-color: rgb(80, 116, 77) !important;
+  color: white !important;
+  font-weight: bold;
+}
+
+.nav-link:hover {
+  background-color: rgb(80, 116, 77) !important;
+  color: white !important;
+  font-weight: bold;
 }
