--- a/src/assets/styles/introducaodedados.css
+++ b/src/assets/styles/introducaodedados.css
@@ -1,5 +1,3 @@
-
-
 @media (min-width: 768px) {
   .sidebar-open {
     left: 270px;
@@ -7,7 +5,7 @@
   }
 }
 
-.introducaodedados{
+.introducaodedados {
   background: rgba(0, 0, 0, 0.5);
 }
 
@@ -15,13 +13,6 @@
   background-color: rgb(80, 116, 77) !important;
 }
 
-
-
-.nav-link{
+/*.nav-link{
   padding: 10px !important;
-}
-
-.nav-link.active{
-  background-color: rgb(80, 116, 77) !important;
-  color: white !important;
-}
+}*/
